--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,5 @@ api-version: 1.18
 authors: [ Louis_Play ]
 description: Mein Miencraft Plguin
 website: https://github.com/LouisSpielt
+commands:
+  gm:
